--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-hello world. dmitriy ya1.dmitriy dobro
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>tekst</h1>
+    <h4>document min</h4>
+    <h6>wau</h6>
+    <p>
+        обычный текст
+        <b>жирный текст</b>
+        <i>курсив</i>
+    </p>
+    <p>
+        <b>теорема пифагора</b>
+        <i>A <sup>2</sup>+B<sup>2</sup>=C<sup>2</sup></i>
+    </p>
+    <p>
+        <b>Formula</b>
+        <i>C<sub>2</sub>H<sub>5</sub>OH</i>
+    </p>
+    <a href="folder/images brat.jpg">Ссылка</a>
+    <p>
+        <a href="images.jpg">картинка</a>
+    </p>
+    <a href="https://www.google.com/" target="_blank">Googl</a>
+    <img src="images.jpg">
+
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <ol>
+        <li>a</li>
+        <li>b</li>
+    </ol>
+    <table>
+        <caption>Table of user</caption>
+        <thead>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>a</td>
+                <td>b</td>
+                <td>c</td>
+                <td>d</td>
+                <td>g</td>
+            </tr>
+        </tbody>
+    </table>
+
+</body>
+
+
+</html>
